@@ -1,3 +1,8 @@
+
+  * AMC-TXT: New group option 'needspace'
+
+  * Bug fixes
+
 1.3.0 (2016-03-16)
 
   * New \AMCsetFoot LaTeX command
